--- a/test.ipynb
+++ b/test.ipynb
@@ -814,14 +814,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\ANN PROJECTS\\AppData\\Local\\Temp\\ipykernel_4176\\718676506.py:20: FutureWarning: DataFrame.applymap has been deprecated. Use DataFrame.map instead.\n",
+      "C:\\Users\\ANN PROJECTS\\AppData\\Local\\Temp\\ipykernel_4176\\2385548597.py:20: FutureWarning: DataFrame.applymap has been deprecated. Use DataFrame.map instead.\n",
       "  basket_sets = basket.applymap(encode_units)\n",
       "c:\\Users\\ANN PROJECTS\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages\\mlxtend\\frequent_patterns\\fpcommon.py:109: DeprecationWarning: DataFrames with non-bool types result in worse computationalperformance and their support might be discontinued in the future.Please use a DataFrame with bool type\n",
       "  warnings.warn(\n"
@@ -844,7 +844,7 @@
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[3], line 37\u001b[0m\n\u001b[0;32m     34\u001b[0m plt\u001b[38;5;241m.\u001b[39mshow()\n\u001b[0;32m     36\u001b[0m \u001b[38;5;66;03m# Extracting date for daily transactions\u001b[39;00m\n\u001b[1;32m---> 37\u001b[0m df[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mdate_time\u001b[39m\u001b[38;5;124m'\u001b[39m] \u001b[38;5;241m=\u001b[39m \u001b[43mdf\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mdate_time\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m]\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mdt\u001b[49m\u001b[38;5;241m.\u001b[39mdate\n\u001b[0;32m     39\u001b[0m \u001b[38;5;66;03m# Calculating daily unique transactions\u001b[39;00m\n\u001b[0;32m     40\u001b[0m daily_transactions \u001b[38;5;241m=\u001b[39m df\u001b[38;5;241m.\u001b[39mgroupby(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mdate\u001b[39m\u001b[38;5;124m'\u001b[39m)[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mTransaction\u001b[39m\u001b[38;5;124m'\u001b[39m]\u001b[38;5;241m.\u001b[39mnunique()\u001b[38;5;241m.\u001b[39mreset_index()\n",
+      "Cell \u001b[1;32mIn[4], line 37\u001b[0m\n\u001b[0;32m     34\u001b[0m plt\u001b[38;5;241m.\u001b[39mshow()\n\u001b[0;32m     36\u001b[0m \u001b[38;5;66;03m# Extracting date for daily transactions\u001b[39;00m\n\u001b[1;32m---> 37\u001b[0m df[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mdate\u001b[39m\u001b[38;5;124m'\u001b[39m] \u001b[38;5;241m=\u001b[39m \u001b[43mdf\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mdate_time\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m]\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mdt\u001b[49m\u001b[38;5;241m.\u001b[39mdate\n\u001b[0;32m     39\u001b[0m \u001b[38;5;66;03m# Calculating daily unique transactions\u001b[39;00m\n\u001b[0;32m     40\u001b[0m daily_transactions \u001b[38;5;241m=\u001b[39m df\u001b[38;5;241m.\u001b[39mgroupby(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mdate\u001b[39m\u001b[38;5;124m'\u001b[39m)[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mTransaction\u001b[39m\u001b[38;5;124m'\u001b[39m]\u001b[38;5;241m.\u001b[39mnunique()\u001b[38;5;241m.\u001b[39mreset_index()\n",
       "File \u001b[1;32mc:\\Users\\ANN PROJECTS\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages\\pandas\\core\\generic.py:6299\u001b[0m, in \u001b[0;36mNDFrame.__getattr__\u001b[1;34m(self, name)\u001b[0m\n\u001b[0;32m   6292\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m (\n\u001b[0;32m   6293\u001b[0m     name \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_internal_names_set\n\u001b[0;32m   6294\u001b[0m     \u001b[38;5;129;01mand\u001b[39;00m name \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_metadata\n\u001b[0;32m   6295\u001b[0m     \u001b[38;5;129;01mand\u001b[39;00m name \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_accessors\n\u001b[0;32m   6296\u001b[0m     \u001b[38;5;129;01mand\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_info_axis\u001b[38;5;241m.\u001b[39m_can_hold_identifiers_and_holds_name(name)\n\u001b[0;32m   6297\u001b[0m ):\n\u001b[0;32m   6298\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m[name]\n\u001b[1;32m-> 6299\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;43mobject\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[38;5;21;43m__getattribute__\u001b[39;49m\u001b[43m(\u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mname\u001b[49m\u001b[43m)\u001b[49m\n",
       "File \u001b[1;32mc:\\Users\\ANN PROJECTS\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages\\pandas\\core\\accessor.py:224\u001b[0m, in \u001b[0;36mCachedAccessor.__get__\u001b[1;34m(self, obj, cls)\u001b[0m\n\u001b[0;32m    221\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m obj \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[0;32m    222\u001b[0m     \u001b[38;5;66;03m# we're accessing the attribute of the class, i.e., Dataset.geo\u001b[39;00m\n\u001b[0;32m    223\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_accessor\n\u001b[1;32m--> 224\u001b[0m accessor_obj \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_accessor\u001b[49m\u001b[43m(\u001b[49m\u001b[43mobj\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m    225\u001b[0m \u001b[38;5;66;03m# Replace the property with the accessor object. Inspired by:\u001b[39;00m\n\u001b[0;32m    226\u001b[0m \u001b[38;5;66;03m# https://www.pydanny.com/cached-property.html\u001b[39;00m\n\u001b[0;32m    227\u001b[0m \u001b[38;5;66;03m# We need to use object.__setattr__ because we overwrite __setattr__ on\u001b[39;00m\n\u001b[0;32m    228\u001b[0m \u001b[38;5;66;03m# NDFrame\u001b[39;00m\n\u001b[0;32m    229\u001b[0m \u001b[38;5;28mobject\u001b[39m\u001b[38;5;241m.\u001b[39m\u001b[38;5;21m__setattr__\u001b[39m(obj, \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_name, accessor_obj)\n",
       "File \u001b[1;32mc:\\Users\\ANN PROJECTS\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages\\pandas\\core\\indexes\\accessors.py:643\u001b[0m, in \u001b[0;36mCombinedDatetimelikeProperties.__new__\u001b[1;34m(cls, data)\u001b[0m\n\u001b[0;32m    640\u001b[0m \u001b[38;5;28;01melif\u001b[39;00m \u001b[38;5;28misinstance\u001b[39m(data\u001b[38;5;241m.\u001b[39mdtype, PeriodDtype):\n\u001b[0;32m    641\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m PeriodProperties(data, orig)\n\u001b[1;32m--> 643\u001b[0m \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mAttributeError\u001b[39;00m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mCan only use .dt accessor with datetimelike values\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
@@ -968,6 +968,88 @@
    ],
    "source": [
     "print(rules[['antecedents', 'consequents', 'support', 'confidence']])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "date_time\n",
+      "2024-04-05    {tempat_tidur_160, tempat_tidur_120}\n",
+      "2024-04-25    {tempat_tidur_160, tempat_tidur_120}\n",
+      "2024-04-28    {tempat_tidur_160, tempat_tidur_120}\n",
+      "2024-05-01    {tempat_tidur_160, tempat_tidur_120}\n",
+      "2024-05-06    {tempat_tidur_160, tempat_tidur_120}\n",
+      "2024-05-10    {tempat_tidur_160, tempat_tidur_120}\n",
+      "2024-05-12    {tempat_tidur_160, tempat_tidur_120}\n",
+      "2024-05-15    {tempat_tidur_160, tempat_tidur_120}\n",
+      "2024-05-19    {tempat_tidur_160, tempat_tidur_120}\n",
+      "2024-05-20    {tempat_tidur_160, tempat_tidur_120}\n",
+      "2024-06-04    {tempat_tidur_160, tempat_tidur_120}\n",
+      "2024-06-10    {tempat_tidur_160, tempat_tidur_120}\n",
+      "2024-06-15    {tempat_tidur_160, tempat_tidur_120}\n",
+      "2024-06-22    {tempat_tidur_160, tempat_tidur_120}\n",
+      "2024-06-24    {tempat_tidur_160, tempat_tidur_120}\n",
+      "2024-06-27    {tempat_tidur_160, tempat_tidur_120}\n",
+      "2024-06-29    {tempat_tidur_160, tempat_tidur_120}\n",
+      "Name: Item, dtype: object\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "from datetime import datetime, timedelta\n",
+    "\n",
+    "# Baca file CSV\n",
+    "df = pd.read_csv('modified_data-transaksi2.csv')\n",
+    "\n",
+    "# Konversi kolom 'date_time' menjadi datetime\n",
+    "df['date_time'] = pd.to_datetime(df['date_time'])\n",
+    "\n",
+    "# Tentukan tanggal 3 bulan terakhir\n",
+    "end_date = pd.Timestamp(datetime.now())\n",
+    "start_date = end_date - pd.DateOffset(months=4)\n",
+    "\n",
+    "# Filter data untuk 3 bulan terakhir\n",
+    "filtered_df = df[(df['date_time'] >= start_date) & (df['date_time'] <= end_date)]\n",
+    "\n",
+    "# Filter baris yang berisi item yang dicari\n",
+    "items_of_interest = ['tempat_tidur_120', 'tempat_tidur_160']\n",
+    "filtered_items_df = filtered_df[filtered_df['Item'].isin(items_of_interest)]\n",
+    "\n",
+    "# Kelompokkan data berdasarkan 'date_time' dan cari item yang ada di setiap tanggal\n",
+    "grouped = filtered_items_df.groupby('date_time')['Item'].apply(set)\n",
+    "\n",
+    "# Temukan tanggal yang berisi kedua item\n",
+    "dates_with_both_items = grouped[grouped.apply(lambda items: all(item in items for item in items_of_interest))]\n",
+    "\n",
+    "# Tampilkan hasil\n",
+    "print(dates_with_both_items)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "# Load your CSV file\n",
+    "file_path = 'data-transaksi2.csv'\n",
+    "data = pd.read_csv(file_path)\n",
+    "\n",
+    "# Add the new 'qty' column with all values set to 1\n",
+    "data['qty'] = 1\n",
+    "\n",
+    "# Save the modified dataframe to a new CSV file\n",
+    "modified_file_path = 'modified_data-transaksi2.csv'\n",
+    "data.to_csv(modified_file_path, index=False)\n"
    ]
   }
  ],
